--- a/writedown/zm/paper.water/main.tex
+++ b/writedown/zm/paper.water/main.tex
@@ -621,8 +621,8 @@ Further increasing the splitting parameter will push the accuracy of RDF in case
 pressure accuracy decreases to 40~Bar (anti-damping effect), so it is not recommanded.
 It should be noticed that the recommanded parameters are less accurate (largest $\sim 5$\% error)
 in calculating the Kirkwood-G factor for large systems (in our case $L_1$ containing 13,824 molecules).
-The accuracy can be improved by using larger cut-off radius, and thus more computer
-time should be invested.
+The accuracy can be improved by using larger cut-off radius, but it requires more computer
+time.
 }
 % Further increasing the splitting paraemter
 % Optimal parameter value for the TIP3P system is thus $l=2,\alpha \leq 1$,
